# simurgh

./: .gitignore  Cargo.toml  README.md
game-rockpaperscissors/: Cargo.toml
game-rockpaperscissors/src/: main.rs
game-tictactoe/: Cargo.toml
games/rock-paper-scissors/: Cargo.toml
games/rock-paper-scissors/src/: main.rs
games/sudoku/: Cargo.toml  README.md
games/sudoku/benches/: board.rs  dfs.rs
games/sudoku/src/: lib.rs  main.rs
games/sudoku/src/model/: board.rs  cell.rs
games/sudoku/src/solver/: search.rs
games/tic-tac-toe/: Cargo.toml  README.md
games/tic-tac-toe/src/: main.rs
simurgh-core/: Cargo.toml
simurgh-core/src/: lib.rs  player.rs
