[package]
name = "sudoku"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simurgh-core = { path = "../../simurgh-core" }

blarg = { version = "1.0.4", features = ["tracing_debug"] }
lazy_static = "1.4.0"
regex = "1.10.2"

[dev-dependencies]
assert_matches = "1.5"
criterion = "0.5.1"
pprof = { version = "0.13.0", features = ["flamegraph", "criterion", "protobuf-codec"]}

[[bench]]
name = "dfs"
harness = false
